--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">TwitterGetter</string>
     <string name="title_activity_maps">TwitterMap</string>
+
+    <!-- Twitter API Keys -->
+    <string name="api_key">CDM7gJDH0fovtrlUYCJ6YjtGn</string>
+    <string name="api_secret">jKhDc4IpqhKCbDdmXIpnb20YnZN0gy5n2oj7tPafP0jW0V7iTp</string>
+    <string name="token">3283700119-9Y8zzYK7wCr6dXWLyHNKvRSLISsbJCs058gJwgB</string>
+    <string name="token_secret">V41JnB6a6tbQBCGFI9DMjK9aVfqNXMeYIPhCdwEslXKEC</string>
 </resources>
